[package]
name = "rl_ball_sym_dll"
version = "0.1.7"
edition = "2021"

[lib]
name = "rl_ball_sym"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rl_ball_sym = { version = "5.0.0", features = ["compression"] }

[profile.release]
codegen-units=1
lto = true
strip = true
panic = "abort"

[lints.clippy]
all = "warn"
